--- a/views/signIn.jade
+++ b/views/signIn.jade
@@ -3,11 +3,12 @@
 </script>
 extends layout
 append body
-	.container(ng-controller="signInController")
-		#signInWrapper
+	.container.pageController(ng-controller="signInController" style="margin:0 auto;width:90%;max-width:966px;")
+		#signInWrapper.formInputWrapper
 			.titleBannerDiv()
-				#titleName= title				
-				div.alert#note #{messages}
+				h3
+					#titleName= title				
+				//div.alert#note #{messages}
 			form#signInDetails(action="/signIn" method = "post")
 				+label-info("Username:")
 				br
