--- a/views/samplesPage.jade
+++ b/views/samplesPage.jade
@@ -1,9 +1,8 @@
 extends layout
 
 append body
-	.container(style="text:center")
-		+alert-i-warning("The samples library is in development.  Eventually I hope this place to be a good source of samples for producers.  Filters and sorting will allow for artists to quickly find what they are looking for.","heart")
-	.container(style="text:center")
-		.titleBannerDiv()
-				#titleName= title
-		
+	.container.pageController(ng-controller="profileHelperController" style="margin:0 auto;width:90%")
+		#samplesPage(ng-show="isLoggedIn()")
+			.titleBannerDiv()
+				h2 Free Samples!
+				+alert-i-warning("The samples library is in development.  Eventually this will be a place for producers to easily find samples, submitted by users.  Filters and sorting will allow for artists to quickly find what they are looking for.")
