--- a/views/signUp.jade
+++ b/views/signUp.jade
@@ -4,7 +4,7 @@
 extends layout
 append body
 	.container.pageController(ng-controller="signUpController" style="margin:0 auto;width:90%;max-width:966px;")
-		+alert-i-warning("Signing up with Music Production Helper allows you to view your profile page.  With a profile on mphelper.io you can: Contribute to the Tips Library, comment on tips, view your loved tips, link your soundcloud account and download samples from the Samples Library")
+		+alert-i-warning("Signing up with Music Production Helper allows you to view your profile page.  With a profile on mphelper.io you can: Contribute to the Tip Library, comment on tips, view your loved tips, link your soundcloud account and download samples from the Samples Library")
 
 		#signInWrapper.formInputWrapper
 
