--- a/views/samplesPage.jade
+++ b/views/samplesPage.jade
@@ -6,3 +6,8 @@ append body
 			.titleBannerDiv()
 				h2 Free Samples!
 				+alert-i-warning("The samples library is in development.  Eventually this will be a place for producers to easily find samples, submitted by users.  Filters and sorting will allow for artists to quickly find what they are looking for.")
+				a(href='/tipsPage')
+					span Go to Tip Library 
+				br
+				a(href='/')
+					span Go to Chromatic Wheel
