Update tiplib route

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -60,7 +60,7 @@ html(lang="en" ng-app='myApp')
         body(data-spy="scroll",data-target=".scrollspy" ng-controller="bodyController")
                +navbar("Music Production Helper","navbar_menu")
                         +nav_item("/") Chromatic Wheel
-                        +nav_item("tipsPage") Tip Library 
+                        +nav_item("tipLib") Tip Library 
                         //+nav_item("about") About
                         +nav_item("samplesPage") Samples
                         +nav_item("profile")#profileButton Profile
