--- a/views/profile.jade
+++ b/views/profile.jade
@@ -7,7 +7,7 @@ append body
 			.titleBannerDiv()
 				h2 Welcome {{username}}
 				+alert-i-warning("The profile page is still in development.  This page will display your saved and contributed tips and samples, your comments, your social network links, stats, and much more!","heart")
-				a(href='/tipsPage')
+				a(href='/tipLib')
 					span Go to Tip Library 
 				br
 				a(href='/')
