Hide tip lib report sign up

--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -283,7 +283,7 @@ append body
 					+btn-xs("Delete")
 				#erasePoints.keyButton(ng-click="updateTipPoints(0)"  ng-show="showButton('ErasePoints')")
 					+btn-xs("0 Points")
-			.signUpForTipsEmailWrapper(style='margin-top:10px' ng-hide="addATip()||editATipToggle")
+			.signUpForTipsEmailWrapper(style='margin-top:10px' ng-hide="true")
 				+accordion("Sign Up for tips email report")
 					+accordion-item-default("Tip Library Email Report","sample")
 						p.textWrapper If you would like to sign up for a monthly email report of the tips added to the library, please sign up with us below.  
