--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -3,7 +3,7 @@ extends layout
 append body
 	.container.pageController(ng-controller="bodyTipHelperController" style = 'margin:0 auto;width:90%;max-width:966px;' )
 		.div(style="text:center;max-width:880px;width:94%")
-			+alert-i-warning("The tip library is in its beta version. This is a place for music producers to quickly reference a set of tips, that will help them generate ideas.  The tip library has filters for a number of categories allowing for a quick search(filter by Daw/Genre/Vst/Theory ect..) The library itself needs to be grown, if you would like to contribute to the Tip Library sign up with Music Production Helper, navigate to the Tip Library and click the 'Add' button.  Also, if you have any ideas on how to make this page a more useful place for producers, please reach out to me, my info is on the contact page under connect. <3","heart")
+			+alert-i-warning("The tip library is still in early development. This is a place for music producers to quickly reference a set of tips, that will help them generate ideas.  The tip library has filters for a number of categories allowing for a quick search(filter by Daw/Genre/Vst/Theory ect..) The library itself needs to be grown, if you would like to contribute to the Tip Library sign up with Music Production Helper, navigate to the Tip Library and click the 'Add' button.  Also, if you have any ideas on how to make this page a more useful place for producers, please reach out to me, my info is on the contact page under connect. <3","heart")
 
 		#navBarWrapper(style="float:left;width:20%;max-width:200px;")
 			//#blockForMargin(style="height:11px;width:100%")
